* BUG#7915 Modify the calculation of the insured outstanding loan balance by taking into account active and hold contracts

Version 1.14 - 2017-11-09
* OTH#2443 Improve the migration performances
* BUG#2443 The end date on increments is now stored instead of being calculated
* BUG#7331 Allow to ignore coverages for the insured outstanding balance calculation
* BUG#7330 Set all loan increment fields to readonly if the loan has been calculated
* OTH#0000 Fix crashing tests after adding default loan sequence
* FEA#7194 Add default loan sequence at module installation
* BUG#6890 Raise an error message if the number of payment exceed the limit.
* BUG#6828 Get option end date even if the loan does not have an end date
* BUG#6563 Fix calculation of TAEA prorata according to the number of days in year
* FEA#6457 Allow to override 'latest_loan_shares' sorting way
* BUG#6458 Fix payments calculation after increment insertion
* BUG#6398 Order loan shares by loan number in contract view form

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02
* FEA#0000 Add lender address on loan
* FEA#0000 Add lender role on party

Version 1.8 - 2016-07-06
* FEA#0000 Add outstanding amount to rule engine
* FEA#0000 Add extra data on loan
* FEA#0000 Add lender field on loan
* FEA#0000 Calculate and store early repayments on increments
* FEA#0000 Allow to use first payment end balance rather than begin balance on increments
* FEA#0000 Allow deferral on any kind of loan including graduated and balloon
* FEA#0000 Allow to recalculate increment dates from first payment date

Version 1.6 - 2015-12-23
* FEA#0000 Manage extra premium depending on remaining capital amount
* FEA#0000 Allow to insert manual increments to modify the loan at effective date (reimbursement, rate modification...)
* FEA#0000 Add warning on loan if last payment is way different from last increment payment amount
* FEA#0000 Allow to have different payment frequency during the life of the loan (one per increment)